add nsb host configuration

--- a/src/Web/Web.config
+++ b/src/Web/Web.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings file="..\..\..\settings\blog-comments\web-appsettings.config">
+  <appSettings file="..\..\..\settings\blog-comments\appsettings.config">
   </appSettings>
-  <connectionStrings configSource="web-connectionstrings.config">
+  <connectionStrings configSource="connectionstrings.config">
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7" />
