--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -22,11 +22,22 @@
   <ItemGroup>
     <PackageReference Include="AsyncFixer" Version="1.1.5" />
     <PackageReference Include="NServiceBus" Version="6.4.0" />
+    <PackageReference Include="NServiceBus.Persistence.Sql" Version="2.1.4" />
+    <PackageReference Include="NServiceBus.Persistence.Sql.MsBuild" Version="2.1.4" />
+    <PackageReference Include="NServiceBus" Version="6.4.0" />
+    <PackageReference Include="NServiceBus.SqlServer" Version="3.1.2" />
     <PackageReference Include="Particular.CodeRules" Version="0.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Components\Components.csproj" />
+    <ProjectReference Include="..\Messages\Messages.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.ServiceProcess" />
   </ItemGroup>  
   
