remove reduntant project references

--- a/src/Components.Integration.Tests/Components.Integration.Tests.csproj
+++ b/src/Components.Integration.Tests/Components.Integration.Tests.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Components\Components.csproj" />
-    <ProjectReference Include="..\Messages\Messages.csproj" />
+    <!--<ProjectReference Include="..\Messages\Messages.csproj" />-->
   </ItemGroup>
 
   <ItemGroup>
