--- a/src/Components/Components.csproj
+++ b/src/Components/Components.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
-    <ProjectReference Include="..\Messages\Messages.csproj" />
+    <!--<ProjectReference Include="..\Messages\Messages.csproj" />-->
   </ItemGroup>
 
   <ItemGroup>
