--- a/src/Components.Unit.Tests/Components.Unit.Tests.csproj
+++ b/src/Components.Unit.Tests/Components.Unit.Tests.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Components\Components.csproj" />
-    <ProjectReference Include="..\Messages\Messages.csproj" />
+    <!--<ProjectReference Include="..\Messages\Messages.csproj" />-->
   </ItemGroup>
 
 </Project>
