--- a/src/Web.Integration.Tests/Web.Integration.Tests.csproj
+++ b/src/Web.Integration.Tests/Web.Integration.Tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <!--<ProjectReference Include="..\Common\Common.csproj" />-->
     <ProjectReference Include="..\Web\Web.csproj" />
   </ItemGroup>
 
