--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="NServiceBus.Persistence.Sql.MsBuild" Version="2.1.4" />
     <PackageReference Include="NServiceBus.SqlServer" Version="3.1.2" />
     <PackageReference Include="Particular.CodeRules" Version="0.2.0" />
+    <PackageReference Include="Simple.Data.SqlServer" Version="0.19.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
 
