--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -42,15 +42,20 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
+    <PackageReference Include="FluentValidation" Version="6.4.1" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Nancy" Version="1.4.4" />
+    <PackageReference Include="Nancy.Validation.FluentValidation" Version="1.4.1" />
     <PackageReference Include="Nancy.Hosting.Aspnet" Version="1.4.1" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\CommentValidator.cs" />
     <Compile Include="Modules\CommentModule.cs" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
