--- a/src/Host/Host.csproj
+++ b/src/Host/Host.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net47</TargetFramework>
     <RuntimeIdentifiers>win</RuntimeIdentifiers>
     <LangVersion>7.1</LangVersion>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
@@ -18,6 +19,12 @@
     <OutputPath>..\bin\host</OutputPath>
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="GitVersionTask" Version="3.6.5">
+      <PrivateAssets>All</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
   
   <ItemGroup>
     <!--<ProjectReference Include="..\Common\Common.csproj" />-->
