--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -21,12 +21,13 @@
     <PackageReference Include="GitVersionTask" Version="3.6.5">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="NServiceBus" Version="6.4.4" />
-    <PackageReference Include="NServiceBus.Mailer" Version="3.0.1" />
-    <PackageReference Include="NServiceBus.Persistence.Sql" Version="3.1.0" />
-    <PackageReference Include="NServiceBus.Persistence.Sql.MsBuild" Version="3.1.0" />
-    <PackageReference Include="NServiceBus.SqlServer" Version="3.1.4" />
-    <PackageReference Include="Particular.CodeRules" Version="0.2.0" />
+    <PackageReference Include="NServiceBus" Version="7.0.1" />
+    <PackageReference Include="NServiceBus.Mailer" Version="4.0.0" />
+    <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.1.0" />
+    <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.2.0" />
+    <PackageReference Include="NServiceBus.Persistence.Sql.MsBuild" Version="4.2.0" />
+    <PackageReference Include="NServiceBus.SqlServer" Version="4.1.0" />
+    <PackageReference Include="Particular.CodeRules" Version="0.2.1" />
     <PackageReference Include="Simple.Data.SqlServer" Version="0.19.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
   </ItemGroup>
