change validatino rules and set CORS support

--- a/src/Web/Web.config
+++ b/src/Web/Web.config
@@ -17,5 +17,10 @@
     <handlers>
       <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
     </handlers>
+    <httpProtocol>
+    <customHeaders>
+      <add name="Access-Control-Allow-Origin" value="*" />
+    </customHeaders>
+  </httpProtocol>
   </system.webServer>
 </configuration>
