--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -68,6 +68,11 @@
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentValidator.cs" />
     <Compile Include="Modules\CommentModule.cs" />
+    <Compile Include="WebResource.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>WebResource.resx</DependentUpon>
+    </Compile>
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -84,6 +89,12 @@
       <Project>{b01ff4b6-84f6-4799-8308-d689551f3315}</Project>
       <Name>Messages</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="WebResource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>WebResource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v15.0\WebApplications\Microsoft.WebApplication.targets" />
