--- a/src/Web/Web.config
+++ b/src/Web/Web.config
@@ -1,26 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
-  <appSettings file="..\..\..\settings\blog-comments\appsettings.config">
-  </appSettings>
-  <connectionStrings configSource="connectionstrings.config">
-  </connectionStrings>
+  <appSettings file="..\..\..\settings\blog-comments\appsettings.config"/>
+  <connectionStrings configSource="connectionstrings.config"/>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.7.2" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.7" />
-    <httpRuntime targetFramework="4.7" />
+    <compilation debug="true" targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.7.2"/>
     <httpHandlers>
-      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+      <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </httpHandlers>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
-    <httpErrors existingResponse="PassThrough" />
+    <validation validateIntegratedModeConfiguration="false"/>
+    <httpErrors existingResponse="PassThrough"/>
     <handlers>
-      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+      <add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
     </handlers>
     <httpProtocol>
-    <customHeaders>
-      <add name="Access-Control-Allow-Origin" value="*" />
-    </customHeaders>
-  </httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*"/>
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
 </configuration>
