--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -1,123 +1,170 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{341733F7-B071-4B33-B5CB-8BE316DB24B5}</ProjectGuid>
-    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Web</RootNamespace>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <DebugType>portable</DebugType>
     <AssemblyName>Web</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
-    <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked>
-    <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
-    <TargetFrameworkProfile />
-    <UseGlobalApplicationHostFile />
-    <Use64BitIISExpress />
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-    <LangVersion>default</LangVersion>
+
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>..\bin\web\net47\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <NoWarn>
-    </NoWarn>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Web" />
-    <PackageReference Include="FluentValidation" Version="6.4.1" />
-    <PackageReference Include="GitVersionTask" Version="3.6.5">
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="log4net" Version="2.0.8" />
-    <PackageReference Include="Nancy" Version="1.4.5" />
-    <PackageReference Include="Nancy.Validation.FluentValidation" Version="1.4.1" />
-    <PackageReference Include="Nancy.Hosting.Aspnet" Version="1.4.1" />
+    <Compile Remove="App_Data\**" />
+    <Content Remove="App_Data\**" />
+    <EmbeddedResource Remove="App_Data\**" />
+    <None Remove="App_Data\**" />
   </ItemGroup>
+    
   <ItemGroup>
-    <Compile Include="Bootstrapper.cs" />
-    <Compile Include="Models\Comment.cs" />
-    <Compile Include="Models\CommentValidator.cs" />
-    <Compile Include="Modules\CommentModule.cs" />
-    <Compile Include="WebResource.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>WebResource.resx</DependentUpon>
-    </Compile>
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Messages\Messages.csproj" />
   </ItemGroup>
+  
+  <!-- <ItemGroup> -->
+	<!-- <Folder Include="App_Data\" /> -->
+ <!-- </ItemGroup> -->
+
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Owin" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.2.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+	  <PackageReference Include="log4net" Version="2.0.8" />
+	  <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
+    <PackageReference Include="Nancy.Validation.FluentValidation" Version="2.0.0-clinteastwood" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{4e3ef9b3-a697-4c59-93a8-4ea7596cfc5b}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Messages\Messages.csproj">
-      <Project>{b01ff4b6-84f6-4799-8308-d689551f3315}</Project>
-      <Name>Messages</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="WebResource.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>WebResource.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v15.0\WebApplications\Microsoft.WebApplication.targets" />
-  <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
-    <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" />
-  </Target>
-  <ProjectExtensions>
-    <VisualStudio>
-      <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
-        <WebProjectProperties>
-          <UseIIS>False</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>50537</DevelopmentServerPort>
-          <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
-          <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
-          <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
-        </WebProjectProperties>
-      </FlavorProperties>
-    </VisualStudio>
-  </ProjectExtensions>
 </Project>
+
+<!-- <?xml version="1.0" encoding="utf-8"?> -->
+<!-- <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003"> -->
+  <!-- <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" /> -->
+  <!-- <PropertyGroup> -->
+    <!-- <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration> -->
+    <!-- <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform> -->
+    <!-- <SchemaVersion>2.0</SchemaVersion> -->
+    <!-- <ProjectGuid>{341733F7-B071-4B33-B5CB-8BE316DB24B5}</ProjectGuid> -->
+    <!-- <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids> -->
+    <!-- <OutputType>Library</OutputType> -->
+    <!-- <AppDesignerFolder>Properties</AppDesignerFolder> -->
+    <!-- <RootNamespace>Web</RootNamespace> -->
+    <!-- <AssemblyName>Web</AssemblyName> -->
+    <!-- <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion> -->
+    <!-- <MvcBuildViews>false</MvcBuildViews> -->
+    <!-- <UseIISExpress>false</UseIISExpress> -->
+    <!-- <MvcProjectUpgradeChecked>true</MvcProjectUpgradeChecked> -->
+    <!-- <IISExpressSSLPort /> -->
+    <!-- <IISExpressAnonymousAuthentication /> -->
+    <!-- <IISExpressWindowsAuthentication /> -->
+    <!-- <IISExpressUseClassicPipelineMode /> -->
+    <!-- <TargetFrameworkProfile /> -->
+    <!-- <UseGlobalApplicationHostFile /> -->
+    <!-- <Use64BitIISExpress /> -->
+  <!-- </PropertyGroup> -->
+  <!-- <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' "> -->
+    <!-- <DebugSymbols>true</DebugSymbols> -->
+    <!-- <DebugType>full</DebugType> -->
+    <!-- <Optimize>false</Optimize> -->
+    <!-- <OutputPath>bin\</OutputPath> -->
+    <!-- <DefineConstants>DEBUG;TRACE</DefineConstants> -->
+    <!-- <ErrorReport>prompt</ErrorReport> -->
+    <!-- <WarningLevel>4</WarningLevel> -->
+    <!-- <Prefer32Bit>false</Prefer32Bit> -->
+    <!-- <TreatWarningsAsErrors>true</TreatWarningsAsErrors> -->
+    <!-- <UseVSHostingProcess>false</UseVSHostingProcess> -->
+    <!-- <LangVersion>default</LangVersion> -->
+    <!-- <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet> -->
+  <!-- </PropertyGroup> -->
+  <!-- <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' "> -->
+    <!-- <DebugSymbols>true</DebugSymbols> -->
+    <!-- <DebugType>pdbonly</DebugType> -->
+    <!-- <Optimize>true</Optimize> -->
+    <!-- <OutputPath>..\bin\web\net47\</OutputPath> -->
+    <!-- <DefineConstants>TRACE</DefineConstants> -->
+    <!-- <ErrorReport>prompt</ErrorReport> -->
+    <!-- <WarningLevel>4</WarningLevel> -->
+    <!-- <NoWarn> -->
+    <!-- </NoWarn> -->
+    <!-- <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet> -->
+  <!-- </PropertyGroup> -->
+  <!-- <ItemGroup> -->
+    <!-- <Reference Include="Microsoft.CSharp" /> -->
+    <!-- <Reference Include="System" /> -->
+    <!-- <Reference Include="System.Data" /> -->
+    <!-- <Reference Include="System.Web" /> -->
+    <!-- <PackageReference Include="FluentValidation" Version="6.4.1" /> -->
+    <!-- <PackageReference Include="GitVersionTask" Version="3.6.5"> -->
+      <!-- <PrivateAssets>all</PrivateAssets> -->
+    <!-- </PackageReference> -->
+    <!-- <PackageReference Include="log4net" Version="2.0.8" /> -->
+    <!-- <PackageReference Include="Nancy" Version="1.4.5" /> -->
+    <!-- <PackageReference Include="Nancy.Validation.FluentValidation" Version="1.4.1" /> -->
+    <!-- <PackageReference Include="Nancy.Hosting.Aspnet" Version="1.4.1" /> -->
+  <!-- </ItemGroup> -->
+  <!-- <ItemGroup> -->
+    <!-- <Compile Include="Bootstrapper.cs" /> -->
+    <!-- <Compile Include="Models\Comment.cs" /> -->
+    <!-- <Compile Include="Models\CommentValidator.cs" /> -->
+    <!-- <Compile Include="Modules\CommentModule.cs" /> -->
+    <!-- <Compile Include="WebResource.Designer.cs"> -->
+      <!-- <AutoGen>True</AutoGen> -->
+      <!-- <DesignTime>True</DesignTime> -->
+      <!-- <DependentUpon>WebResource.resx</DependentUpon> -->
+    <!-- </Compile> -->
+    <!-- <Content Include="Web.config"> -->
+      <!-- <SubType>Designer</SubType> -->
+    <!-- </Content> -->
+  <!-- </ItemGroup> -->
+  <!-- <ItemGroup> -->
+    <!-- <Folder Include="App_Data\" /> -->
+  <!-- </ItemGroup> -->
+  <!-- <ItemGroup> -->
+    <!-- <ProjectReference Include="..\Common\Common.csproj"> -->
+      <!-- <Project>{4e3ef9b3-a697-4c59-93a8-4ea7596cfc5b}</Project> -->
+      <!-- <Name>Common</Name> -->
+    <!-- </ProjectReference> -->
+    <!-- <ProjectReference Include="..\Messages\Messages.csproj"> -->
+      <!-- <Project>{b01ff4b6-84f6-4799-8308-d689551f3315}</Project> -->
+      <!-- <Name>Messages</Name> -->
+    <!-- </ProjectReference> -->
+  <!-- </ItemGroup> -->
+  <!-- <ItemGroup> -->
+    <!-- <EmbeddedResource Include="WebResource.resx"> -->
+      <!-- <Generator>ResXFileCodeGenerator</Generator> -->
+      <!-- <LastGenOutput>WebResource.Designer.cs</LastGenOutput> -->
+    <!-- </EmbeddedResource> -->
+  <!-- </ItemGroup> -->
+  <!-- <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" /> -->
+  <!-- <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v15.0\WebApplications\Microsoft.WebApplication.targets" /> -->
+  <!-- <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'"> -->
+    <!-- <AspNetCompiler VirtualPath="temp" PhysicalPath="$(WebProjectOutputDir)" /> -->
+  <!-- </Target> -->
+  <!-- <ProjectExtensions> -->
+    <!-- <VisualStudio> -->
+      <!-- <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}"> -->
+        <!-- <WebProjectProperties> -->
+          <!-- <UseIIS>False</UseIIS> -->
+          <!-- <AutoAssignPort>True</AutoAssignPort> -->
+          <!-- <DevelopmentServerPort>50537</DevelopmentServerPort> -->
+          <!-- <DevelopmentServerVPath>/</DevelopmentServerVPath> -->
+          <!-- <IISUrl> -->
+          <!-- </IISUrl> -->
+          <!-- <NTLMAuthentication>False</NTLMAuthentication> -->
+          <!-- <UseCustomServer>False</UseCustomServer> -->
+          <!-- <CustomServerUrl> -->
+          <!-- </CustomServerUrl> -->
+          <!-- <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile> -->
+        <!-- </WebProjectProperties> -->
+      <!-- </FlavorProperties> -->
+    <!-- </VisualStudio> -->
+  <!-- </ProjectExtensions> -->
+<!-- </Project> -->
