set output path

--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -9,10 +9,12 @@
 
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
+    <OutputPath>bin</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
+    <OutputPath>..\bin\web\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
