--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="AsyncFixer" Version="1.1.6" />
     <PackageReference Include="GitVersionTask" Version="4.0.0">
       <PrivateAssets>All</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
