--- a/src/Components.Integration.Tests/Components.Integration.Tests.csproj
+++ b/src/Components.Integration.Tests/Components.Integration.Tests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="GitVersionTask" Version="4.0.0">
       <PrivateAssets>All</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
