--- a/src/Components.Unit.Tests/Components.Unit.Tests.csproj
+++ b/src/Components.Unit.Tests/Components.Unit.Tests.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="GitVersionTask" Version="4.0.0">
       <PrivateAssets>All</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="NServiceBus.Testing" Version="7.0.0" />
