--- a/src/Components/Components.csproj
+++ b/src/Components/Components.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <PackageReference Include="GitVersionTask" Version="4.0.0">
       <PrivateAssets>All</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.4.0" />
   </ItemGroup>
