--- a/src/Web.Integration.Tests/Web.Integration.Tests.csproj
+++ b/src/Web.Integration.Tests/Web.Integration.Tests.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="GitVersionTask" Version="4.0.0">
       <PrivateAssets>All</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
