update to latest beta version -> make dotnet build/test/publish run successfully

--- a/src/Components.Unit.Tests/Components.Unit.Tests.csproj
+++ b/src/Components.Unit.Tests/Components.Unit.Tests.csproj
@@ -18,8 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersionTask" Version="4.0.0">
-      <PrivateAssets>All</PrivateAssets>
+    <PackageReference Include="GitVersionTask" Version="5.0.0-beta1-41">
+      <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
