1. update packages 2. use NServiceBus Transport native delayed delivery

--- a/src/Host.CommentPolicy/Host.CommentPolicy.csproj
+++ b/src/Host.CommentPolicy/Host.CommentPolicy.csproj
@@ -6,11 +6,11 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\bin\host.commentpolicy</OutputPath>
-    <CodeAnalysisRuleSet>Host.CommentPolicy.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <CodeAnalysisRuleSet>Host.CommentPolicy.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
