--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -26,12 +26,15 @@
     <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.1" />
     <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
     <PackageReference Include="NServiceBus.Metrics" Version="3.0.0" />
-    <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.2" />
+    <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.4" />
     <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
-    <PackageReference Include="NServiceBus.Persistence.Sql" Version="4.4.0" />
-    <PackageReference Include="NServiceBus.SqlServer" Version="4.1.0" />
+    <PackageReference Include="NServiceBus.Persistence.Sql" Version="5.0.0" />
+    <PackageReference Include="NServiceBus.SqlServer" Version="6.0.0" />
     <PackageReference Include="Particular.CodeRules" Version="0.2.1" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
