--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -4,4 +4,12 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NServiceBus" Version="7.2.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
+    </ItemGroup>
+
 </Project>
