add fake logic for register comment policy

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -8,4 +8,8 @@
         <Compile Include="CommentRegistration.fs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
+    </ItemGroup>
+
 </Project>
