--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\common\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
+      <ProjectReference Include="..\Bc.Logic.Endpoint\Bc.Logic.Endpoint.fsproj" />
     </ItemGroup>
 
 </Project>
