add fake logic for register comment policy

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -9,6 +9,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\common\Bc.Common.Logic\Bc.Common.Logic.fsproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.csproj" />
     </ItemGroup>
 
