add policy flow of checking comment answer

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Compile Include="CommentRegistration.fs" />
+        <Compile Include="CommentAnswer.fs" />
     </ItemGroup>
 
     <ItemGroup>
