add policy checking pull request status

--- a/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.csproj
+++ b/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="ITOps\GitHub\PullRequestCreation" />
       <Folder Include="ITOps\TakeComment" />
     </ItemGroup>
 
