--- a/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
+++ b/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
@@ -6,10 +6,12 @@
 
     <ItemGroup>
         <Compile Include="GitHubApi.fs" />
+        <Compile Include="GitHubConfigurationProvider.fs" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="FSharp.Data" Version="3.3.3" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
 </Project>
