add GitHubPullRequestCreation policy logic

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Compile Include="GitHubPullRequestVerification.fs" />
+        <Compile Include="GitHubPullRequestCreation.fs" />
     </ItemGroup>
 
     <ItemGroup>
