add GithubPullRequestVerification policu logic

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -7,6 +7,7 @@
     <ItemGroup>
         <Compile Include="GitHubPullRequestVerification.fs" />
         <Compile Include="GitHubPullRequestCreation.fs" />
+        <Compile Include="CommentAnswer.fs" />
     </ItemGroup>
 
     <ItemGroup>
