--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\common-prev\Bc.Common.Endpoint\Bc.Common.Endpoint.csproj" />
+      <ProjectReference Include="..\Bc.Contracts.Externals.Endpoint\Bc.Contracts.Externals.Endpoint.fsproj" />
       <ProjectReference Include="..\Bc.Contracts.Internals.Endpoint\Bc.Contracts.Internals.Endpoint.fsproj" />
       <ProjectReference Include="..\Bc.Logic.Endpoint\Bc.Logic.Endpoint.fsproj" />
     </ItemGroup>
