add CommentRegistration policy logic

--- a/src/endpoint/Bc.Contracts.Externals.Endpoint/Bc.Contracts.Externals.Endpoint.fsproj
+++ b/src/endpoint/Bc.Contracts.Externals.Endpoint/Bc.Contracts.Externals.Endpoint.fsproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <Compile Include="CommentAnswer.fs" />
+        <Compile Include="CommentRegistration.fs" />
     </ItemGroup>
 
 </Project>
