add comment notification policy

--- a/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
+++ b/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
@@ -10,6 +10,7 @@
         <Compile Include="CommentTaking.fs" />
         <Compile Include="CommentRegistration.fs" />
         <Compile Include="CommentAnswer.fs" />
+        <Compile Include="CommentAnswerNotification.fs" />
     </ItemGroup>
 
 </Project>
