--- a/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
+++ b/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
@@ -19,6 +19,7 @@
         <Compile Include="CommentAnswer.fs" />
         <Compile Include="CommentAnswerNotification.fs" />
         <Compile Include="CommentRegistrationPolicy.fs" />
+        <Compile Include="CommentTaking.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
