--- a/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
+++ b/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
@@ -13,4 +13,8 @@
         <Compile Include="CommentAnswerNotification.fs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MinVer" Version="2.3.0" />
+    </ItemGroup>
+
 </Project>
