--- a/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
+++ b/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
@@ -7,6 +7,7 @@
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
       <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.2" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="NServiceBus" Version="7.2.4" />
       <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.1" />
       <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
