--- a/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
+++ b/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
       <PackageReference Include="FSharp.Data" Version="3.3.3" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
     </ItemGroup>
 
