--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="NServiceBus" Version="7.2.4" />
       <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
