--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
