--- a/src/tests/integration/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
+++ b/src/tests/integration/Bc.Common.Logic.Integration.Tests/Bc.Common.Logic.Integration.Tests.fsproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
       <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
