--- a/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.csproj
+++ b/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="AsyncFixer" Version="1.3.0" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+      <PackageReference Include="MinVer" Version="2.3.0" />
       <PackageReference Include="NUnit" Version="3.12.0" />
       <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
