add logic of format user name

--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -9,6 +9,7 @@
         <Compile Include="GitHubPullRequestCreation.fs" />
         <Compile Include="CommentAnswer.fs" />
         <Compile Include="CommentAnswerNotification.fs" />
+        <Compile Include="CommentRegistration.fs" />
     </ItemGroup>
 
     <ItemGroup>
