--- a/src/tests/unit/Bc.Logic.Endpoint.Tests/Bc.Logic.Endpoint.Tests.fsproj
+++ b/src/tests/unit/Bc.Logic.Endpoint.Tests/Bc.Logic.Endpoint.Tests.fsproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
         <Compile Include="CommentAnswerNotification.fs" />
+        <Compile Include="CommentRegistration.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
