--- a/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
+++ b/src/common/Bc.Common.Endpoint/Bc.Common.Endpoint.csproj
@@ -1,23 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AsyncFixer" Version="1.3.0" />
+      <PackageReference Include="AsyncFixer" Version="1.5.1">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
-      <PackageReference Include="MinVer" Version="2.3.0" />
-      <PackageReference Include="NServiceBus" Version="7.3.0" />
+      <!-- <PackageReference Include="MinVer" Version="2.5.0">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference> -->
+      <PackageReference Include="NServiceBus" Version="7.5.0" />
       <PackageReference Include="NServiceBus.Heartbeat" Version="3.0.1" />
       <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
       <PackageReference Include="NServiceBus.Metrics" Version="3.0.0" />
-      <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.4" />
-      <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.2.0" />
-      <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.0.2" />
-      <PackageReference Include="NServiceBus.SqlServer" Version="6.1.1" />
+      <PackageReference Include="NServiceBus.Metrics.ServiceControl" Version="3.0.6" />
+      <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.3.0" />
+      <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.2.0" />
+      <PackageReference Include="NServiceBus.SqlServer" Version="6.3.1" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
-      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
