--- a/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
+++ b/src/common/Bc.Common.Logic/Bc.Common.Logic.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -9,9 +9,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="FSharp.Data" Version="3.3.3" />
-      <PackageReference Include="MinVer" Version="2.3.0" />
-      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+      <PackageReference Include="FSharp.Data" Version="4.2.2" />
+      <!-- <PackageReference Include="MinVer" Version="2.3.0" /> -->
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
