--- a/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
+++ b/src/endpoint/Bc.Contracts.Internals.Endpoint/Bc.Contracts.Internals.Endpoint.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,8 +13,8 @@
         <Compile Include="CommentAnswerNotification.fs" />
     </ItemGroup>
 
-    <ItemGroup>
+    <!-- <ItemGroup>
       <PackageReference Include="MinVer" Version="2.3.0" />
-    </ItemGroup>
+    </ItemGroup> -->
 
 </Project>
