--- a/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
+++ b/src/endpoint/Bc.Endpoint/Bc.Endpoint.csproj
@@ -1,16 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AsyncFixer" Version="1.3.0" />
-      <PackageReference Include="MinVer" Version="2.3.0" />
-      <PackageReference Include="NServiceBus" Version="7.3.0" />
+      <PackageReference Include="AsyncFixer" Version="1.5.1">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <!-- <PackageReference Include="MinVer" Version="2.3.0" /> -->
+      <PackageReference Include="NServiceBus" Version="7.5.0" />
       <PackageReference Include="NServiceBus.Mailer" Version="5.0.0" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
-      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
