--- a/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
+++ b/src/endpoint/Bc.Logic.Endpoint/Bc.Logic.Endpoint.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,8 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MinVer" Version="2.3.0" />
-      <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+      <!-- <PackageReference Include="MinVer" Version="2.3.0" /> -->
+      <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
