--- a/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
+++ b/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
 
         <IsPackable>false</IsPackable>
         <GenerateProgramFile>false</GenerateProgramFile>
@@ -9,12 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="MinVer" Version="2.3.0" />
+        <!-- <PackageReference Include="MinVer" Version="2.3.0" /> -->
         <PackageReference Include="NServiceBus.Testing" Version="7.2.0" />
         <PackageReference Include="NSubstitute" Version="4.2.2" />
-        <PackageReference Include="nunit" Version="3.12.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+        <PackageReference Include="nunit" Version="3.13.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     </ItemGroup>
 
     <ItemGroup>
