--- a/src/web/Bc.Web/Bc.Web.csproj
+++ b/src/web/Bc.Web/Bc.Web.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     </PropertyGroup>
 
@@ -19,9 +19,12 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="AsyncFixer" Version="1.3.0" />
-      <PackageReference Include="MinVer" Version="2.3.0" />
-      <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.0.1" />
+      <PackageReference Include="AsyncFixer" Version="1.5.1">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <!-- <PackageReference Include="MinVer" Version="2.3.0" /> -->
+      <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0" />
       <PackageReference Include="Particular.CodeRules" Version="0.3.0" />
     </ItemGroup>
 
