replace C# code by F# code

--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Properties/launchSettings.json
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Properties/launchSettings.json
@@ -4,22 +4,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56064",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:45685",
+      "sslPort": 44321
     }
   },
   "profiles": {
-    "Bc.Host.AspNet.Endpoint": {
-      "commandName": "Project",
-      "applicationUrl": "https://localhost:5002;http://localhost:5003",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },    
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "Bc.Host.AspNet.Endpoint": {
+      "commandName": "Project",
+      "dotnetRunMessages": "true",
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
