replace C# code by F# code

--- a/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.fsproj
+++ b/src/endpoint/Bc.Host.AspNet.Endpoint/Bc.Host.AspNet.Endpoint.fsproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bc.Endpoint\Bc.Endpoint.csproj" />
+    <ProjectReference Include="..\Bc.Endpoint\Bc.Endpoint.fsproj" />
     <ProjectReference Include="..\Bc.Logic.Endpoint\Bc.Logic.Endpoint.fsproj" />
-  </ItemGroup>  
+  </ItemGroup>
 
 </Project>
