make code compile

--- a/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
+++ b/src/tests/unit/Bc.Endpoint.Tests/Bc.Endpoint.Tests.fsproj
@@ -28,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\endpoint\Bc.Endpoint\Bc.Endpoint.csproj" />
+      <ProjectReference Include="..\..\..\endpoint\Bc.Endpoint\Bc.Endpoint.fsproj" />
     </ItemGroup>
 
 </Project>
