replace C# code by F# code

--- a/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.fsproj
+++ b/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.fsproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <Compile Include="EndpointFactory.fs" />
       <Compile Include="CommentAnswerNotificationSender.fs" />
+      <Compile Include="CommentRegistrationSender.fs" />
       <!-- <None Include="app.config" /> -->
     </ItemGroup>
 
