replaced C# code by F# code

--- a/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.fsproj
+++ b/src/tests/integration/Bc.Endpoint.Integration.Tests/Bc.Endpoint.Integration.Tests.fsproj
@@ -13,6 +13,7 @@
       <Compile Include="CommentAnswerNotificationSender.fs" />
       <Compile Include="CommentRegistrationSender.fs" />
       <Compile Include="CommentTakingSender.fs" />
+      <Compile Include="GitHubPullRequestCreationSender.fs" />
       <!-- <None Include="app.config" /> -->
     </ItemGroup>
 
